FEATURE: Upload multiple pictures with a single action (closes #2).

--- a/template/pictures.html
+++ b/template/pictures.html
@@ -13,5 +13,9 @@
       </div>
       {{/pictures}}
     </form>
+    <form method='post' enctype='multipart/form-data'>
+      <input type='file' name='sources[]' size='40' multiple />
+      <input type='submit' value='UPLOAD' />
+    </form>
   </body>
 </html>
