FIX: User interface improved.

--- a/template/index.html
+++ b/template/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <header>
-      <nav id="here">Corpora</nav>
+      <nav id="here">Pictures</nav>
       <form method='get' action='picture/'>
         <input type='text' name='corpus' size='12' placeholder='New corpus' />
         <button type='submit'>Add</button>
@@ -13,7 +13,7 @@
     </header>
     <ul>
       <li>
-        <a href='picture/'>All pictures ({{count}})</a>
+        <a href='picture/'>Miscellanea ({{count}})</a>
       </li>
       {{#corpora}}
         <li>
