--- a/template/pictures.html
+++ b/template/pictures.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8" />
     <title>Steatite</title>
     <link rel="stylesheet" type="text/css" href="../stylesheet.css" />    
     <script src="http://code.jquery.com/jquery.min.js"></script>
