FIX: When renamed, duplicates should disappear.

--- a/template/pictures.html
+++ b/template/pictures.html
@@ -32,7 +32,8 @@
       $.ajax({
         type: "POST",
         url: "../attributes.php?source_id=" + id
-          + "&attribute_name=name&attribute_value=" + value
+          + "&attribute_name=name&attribute_value=" + value,
+        success: function() {location.reload();}
       });
       return value;
     }
