REFACTORING: Harmonizing quotes in HTML templates.

--- a/view/index.html
+++ b/view/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8" />
+    <meta charset='UTF-8' />
     <title>Steatite</title>
-    <link rel="stylesheet" type="text/css" href="stylesheet.css" />    
+    <link rel='stylesheet' type='text/css' href='stylesheet.css' />    
   </head>
   <body>
     <header>
-      <nav id="here">Pictures</nav>
+      <nav id='here'>Pictures</nav>
       <form method='get' action='picture/'>
         <input type='text' name='corpus' size='12' placeholder='New corpus' />
         <button type='submit'>Add</button>
