--- a/view/pictures.html
+++ b/view/pictures.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8" />
+    <meta charset='UTF-8' />
     <title>Steatite</title>
-    <link rel="stylesheet" type="text/css" href="../stylesheet.css" />    
-    <script src="http://code.jquery.com/jquery.min.js"></script>
-    <script src="http://www.appelsiini.net/download/jquery.jeditable.mini.js"></script>
-    <script type="text/javascript">
+    <link rel='stylesheet' type='text/css' href='../stylesheet.css' />    
+    <script src='http://code.jquery.com/jquery.min.js'></script>
+    <script src='http://www.appelsiini.net/download/jquery.jeditable.mini.js'></script>
+    <script type='text/javascript'>
 
     function move() {
       var destination = $("#destination").val();
@@ -92,7 +92,7 @@
     <header>
       <nav>
         <a href='..'>Pictures</a> &gt;
-        <span id="here">
+        <span id='here'>
           {{corpus}}
           {{^corpus}}Miscellanea{{/corpus}}
         </span>
@@ -109,6 +109,6 @@
       </div>
       {{/pictures}}
     </form>
-    <footer id="bottom" />
+    <footer id='bottom' />
   </body>
 </html>
