--- a/view/index.html
+++ b/view/index.html
@@ -14,13 +14,17 @@
       </form>
     </header>
     <ul>
-      <li>
-        <a href='picture/'>Miscellanea ({{count}})</a>
-      </li>
+      <div class='picture'>
+        <a href='picture/'><img src='thumbnail/{{sample}}' /></a>
+        <div>Miscellanea ({{count}})</div>
+      </div>
       {{#corpora}}
-        <li>
-          <a href='picture/?corpus={{{id}}}'>{{id}} ({{count}})</a>
-        </li>
+        <div class='picture'>
+          <a href='picture/?corpus={{{id}}}'>
+            <img src='thumbnail/{{sample}}' />
+          </a>
+          <div>{{id}} ({{count}})</div>
+        </div>
       {{/corpora}}
     </ul>
   </body>
