FIX: Pictures can be deleted again.

--- a/view/pictures.html
+++ b/view/pictures.html
@@ -28,7 +28,7 @@
       });
     }
 
-    function remove() {
+    function deletePictures() {
       var checked = $(".picture :checked");
       var countdown = checked.size();
       checked.each(function() {
@@ -118,7 +118,7 @@
         "<form>"
         + "<button onclick='resetUI()' type='button'>Cancel</button>"
         + "<input id='toggle' type='checkbox' onclick='toggleSelect()'>Select all</button>&nbsp;"
-        + "<button type='button' onclick='remove()'>Delete</button>"
+        + "<button type='button' onclick='deletePictures()'>Delete</button>"
         + "</form>"
       );
       $(".picture>div").prepend("<input type='checkbox' />");
