FIX: By default, pictures should be sorted by name.
Sorting by date is better when updating the corpus,
whereas sorting by name is better when consulting it.
It seems normal to make consultation easier.

--- a/view/index.html
+++ b/view/index.html
@@ -19,7 +19,7 @@
     </div>
     {{#corpora}}
       <div class='picture'>
-        <a href='picture/?corpus={{{id}}}'>
+        <a href='picture/?corpus={{{id}}}&sort=2'>
           <img src='thumbnail/{{sample}}' />
         </a>
         <div>{{id}} ({{count}})</div>
