--- a/view/index.html
+++ b/view/index.html
@@ -22,7 +22,7 @@
         <a href='picture/?corpus={{{id}}}&sort=2'>
           <img src='thumbnail/{{sample}}' />
         </a>
-        <div>{{id}} ({{count}})</div>
+        <div>{{{id}}} ({{count}})</div>
       </div>
     {{/corpora}}
   </body>
