--- a/src/view/pictures.html
+++ b/src/view/pictures.html
@@ -4,8 +4,8 @@
     <meta charset='UTF-8' />
     <title>Steatite</title>
     <link rel='stylesheet' type='text/css' href='../stylesheet.css' />    
-    <script src='http://code.jquery.com/jquery.min.js'></script>
-    <script src='http://www.appelsiini.net/download/jquery.jeditable.mini.js'></script>
+    <script src='https://code.jquery.com/jquery.min.js'></script>
+    <script src='https://www.appelsiini.net/download/jquery.jeditable.mini.js'></script>
     <script type='text/javascript'>
 
     function move() {
