Revert "FIX: When renamed, duplicates should disappear."
This reverts commit 5786c5bca10fb5693cb96a9d73fb2a2d69d06c35.

--- a/src/view/pictures.html
+++ b/src/view/pictures.html
@@ -50,8 +50,7 @@
       $.ajax({
         type: "POST",
         url: "../attributes.php?source_id=" + id
-          + "&attribute_name=name&attribute_value=" + value,
-        success: function() {location.reload();}
+          + "&attribute_name=name&attribute_value=" + value
       });
       return value;
     }
